needs more styling

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,6 +3,8 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="https://bootswatch.com/superhero/bootstrap.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 <h1>Compatability Test</h1>
@@ -143,6 +145,7 @@
 		margin-top: 40px;
 		margin-left: 150px;
 	}
+
   </style>
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
