--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,6 +3,7 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/superhero/bootstrap.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
