--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+<div class="container">
 <h1>Compatability Test</h1>
 <h2>Survey Questions:<h2>
 <form class="form-horizontal">
@@ -123,6 +124,7 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 		<button type="button" class="btn btn-lg btn-primary" id="subButton"><span class="glyphicon glyphicon-list-alt"></span> See Results</button></a>
+	</div>
   <style type="text/css">
 	#inputImage {
 		width:400px;
@@ -143,8 +145,9 @@
 	}
 	#instructions{
 		margin-top: 40px;
-		margin-left: 150px;
+		margin-left: 10px;
 	}
+
 
   </style>
 </body>
