--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -147,8 +147,16 @@
 		margin-top: 40px;
 		margin-left: 10px;
 	}
-
-
+	.bestPic{
+		width:60%;
+		height: 60%;
+	}
+	@media only screen and (max-width: 600px) {
+		.bestPic{
+			height:40%;
+			width:60%;
+		}
+	}
   </style>
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
